fix(portal) : display scrollbar on list, not on page

--- a/srcjs/src/app/index.css
+++ b/srcjs/src/app/index.css
@@ -134,6 +134,10 @@ md-sidenav.new-session {
   min-width: 400px;
 }
 
+md-content.session-base {
+  background-color: transparent;
+  padding: 10px;
+}
 
 /* -------------------- */
 /* Search Profiles Page */
